# fwzs

./: .gitignore  Makefile.am  PolkitAuth.py  README  TODO  configure.ac  fwzsapp.desktop.in  fwzsapp.py  fwzsd.py  fwzsd.service.in  org.fedoraproject.FirewallD1.service  org.opensuse.zoneswitcher.conf  org.opensuse.zoneswitcher.policy  org.opensuse.zoneswitcher.service  org.opensuse.zoneswitcher.service.in
po/: Makefile.am  fwzsapp.pot  fwzsapp_de.po  fwzsd.pot  fwzsd_de.po
